--- a/render.yaml
+++ b/render.yaml
@@ -8,11 +8,20 @@ services:
       - key: NODE_ENV
         value: production
       - key: DATABASE_URL
-        sync: false
+        fromDatabase:
+          name: dialogengine-db
+          property: connectionString
       - key: NEXTAUTH_URL
         sync: false
       - key: NEXTAUTH_SECRET
         generateValue: true
       - key: LUNARY_PUBLIC_KEY
         sync: false
-    autoDeploy: true 
+    autoDeploy: true
+
+databases:
+  - name: dialogengine-db
+    databaseName: dialogengine
+    plan: free
+    postgresMajorVersion: "14"
+    ipAllowList: [] 
