--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/typography": "^0.5.16",
+    "autoprefixer": "^10.4.17",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -24,11 +25,13 @@
     "lucide-react": "^0.483.0",
     "lunary": "^0.8.8",
     "next": "15.2.3",
+    "postcss": "^8.4.35",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^3.3.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
