--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@tailwindcss/postcss": "^4.0.15",
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.17",
     "class-variance-authority": "^0.7.1",
@@ -31,11 +32,11 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^3.3.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^20",
     "@types/node-fetch": "^2.6.12",
     "@types/react": "^19",
@@ -45,7 +46,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.3.3",
     "typescript": "^5"
   }
 }
