--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
-    "@tailwindcss/postcss": "^4.0.15",
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.17",
     "class-variance-authority": "^0.7.1",
@@ -25,27 +24,28 @@
     "linkify-react": "^4.2.0",
     "lucide-react": "^0.483.0",
     "lunary": "^0.8.8",
-    "next": "15.2.3",
+    "next": "14.1.0",
     "postcss": "^8.4.35",
     "prisma": "^6.5.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-markdown": "^10.1.0",
-    "tailwind-merge": "^3.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.4.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^20",
     "@types/node-fetch": "^2.6.12",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.17",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.3",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
