--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: dialogengine-v2
     env: node
+    region: frankfurt
     buildCommand: rm -rf node_modules && npm install && npm run build
     startCommand: npm start
     envVars:
@@ -22,6 +23,7 @@ services:
 databases:
   - name: dialogengine-db
     databaseName: dialogengine
+    region: frankfurt
     plan: free
     postgresMajorVersion: "14"
     ipAllowList: [] 
