--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
-    "@tailwindcss/typography": "^0.5.16",
-    "autoprefixer": "^10.4.17",
+    "@tailwindcss/typography": "0.5.10",
+    "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -25,13 +25,14 @@
     "lucide-react": "^0.483.0",
     "lunary": "^0.8.8",
     "next": "14.1.0",
-    "postcss": "^8.4.35",
+    "postcss": "8.4.35",
+    "postcss-import": "15.1.0",
     "prisma": "^6.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "3.4.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -41,11 +42,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
-    "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
