--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,14 @@ services:
       rm -rf node_modules && rm -rf .next && npm cache clean --force
       npm install -g tailwindcss@3.4.1 postcss@8.4.35 postcss-import@15.1.0 autoprefixer@10.4.17
       npm install
-      npm run build
+      # Backup für globals.css falls der Import fehlschlägt
+      cat > src/app/globals.css.backup << EOL
+      @tailwind base;
+      @tailwind components;
+      @tailwind utilities;
+      EOL
+      # Versuche zu bauen, ersetze globals.css wenn es fehlschlägt
+      npm run build || (cp src/app/globals.css.backup src/app/globals.css && npm run build)
     startCommand: npm start
     envVars:
       - key: NODE_ENV
