--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "tailwindcss -i ./src/app/globals.css -o ./src/app/globals.processed.css && cp ./src/app/globals.processed.css ./src/app/globals.css && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -14,7 +14,6 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/typography": "0.5.10",
-    "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -25,25 +24,28 @@
     "lucide-react": "^0.483.0",
     "lunary": "^0.8.8",
     "next": "14.1.0",
-    "postcss": "8.4.35",
-    "postcss-import": "15.1.0",
     "prisma": "^6.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss": "3.4.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.0.16",
     "@types/node": "^20",
     "@types/node-fetch": "^2.6.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "postcss": "^8.5.3",
+    "postcss-import": "^16.1.0",
+    "postcss-nesting": "^13.0.1",
+    "tailwindcss": "3.4.1",
     "typescript": "^5"
   }
 }
