fix: Füge prisma generate zum Build-Prozess hinzu

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: dialogengine-v2
     env: node
     region: frankfurt
-    buildCommand: pnpm install --no-lockfile && pnpm run build
+    buildCommand: pnpm install --no-lockfile && pnpm prisma generate && pnpm run build
     startCommand: npm start
     envVars:
       - key: NODE_ENV
