--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "create-admin": "npx ts-node --require tsconfig-paths/register scripts/create-admin.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.8.0",
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/typography": "0.5.10",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -25,6 +28,7 @@
     "lucide-react": "^0.483.0",
     "lunary": "^0.8.8",
     "next": "14.1.0",
+    "next-auth": "^4.24.11",
     "prisma": "^6.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,6 +39,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.16",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/node-fetch": "^2.6.12",
     "@types/react": "^18",
@@ -47,6 +52,8 @@
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^13.0.1",
     "tailwindcss": "3.4.1",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5"
   }
 }
