--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
+    "geist": "^1.3.1",
     "linkify-plugin-hashtag": "^4.2.0",
     "linkify-plugin-mention": "^4.2.0",
     "linkify-react": "^4.2.0",
