--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@auth/prisma-adapter": "^2.8.0",
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/typography": "0.5.10",
@@ -34,7 +38,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.1.0",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.6.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
